<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bt_name"
        android:textSize="@dimen/label_font_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow>

                <Button
                    android:id="@+id/m_insert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/insert" />

                <Button
                    android:id="@+id/m_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sett" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/m_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select" />

                <Button
                    android:id="@+id/m_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>
